--- a/src/app/components/search-card/search-card.component.css
+++ b/src/app/components/search-card/search-card.component.css
@@ -1,7 +1,9 @@
 .results {
-  width: 90%;
+  width: 96%;
   position: absolute;
   overflow-y: auto;
   z-index: 100;
-  border-radius: 6px;
+  border-radius: 0 0 6px 6px;
+  left: 2%;
+  right: 2%;
 }
