--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,12 +12,16 @@
 
   <div class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item">
+      <a class="navbar-item" routerLink="/home">
         Home
       </a>
 
-      <a class="navbar-item">
-        Documentation
+      <a class="navbar-item" routerLink="/analyzer">
+        Analyzer
+      </a>
+
+      <a class="navbar-item" routerLink="/search">
+        Search
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
