Arrange files by client and server

--- a/client/src/app/components/search-card/search-card.component.html
+++ b/client/src/app/components/search-card/search-card.component.html
@@ -1,5 +1,5 @@
 <nav class="panel m-4 is-relative">
-  <p class="panel-heading">Repositories</p>
+  <p class="panel-heading">Cards</p>
   <div class="panel-block">
     <p class="control has-icons-left">
       <input class="input" type="text" placeholder="Search" (input)="onSearch($event)" />
