--- a/client/src/app/components/search-card/search-card.component.html
+++ b/client/src/app/components/search-card/search-card.component.html
@@ -9,7 +9,7 @@
     </p>
   </div>
   <div class="notification panel-block results" *ngIf="(filteredResults | async) as results">
-    <a class="item p-2" *ngFor="let result of results" href="#">{{ result }}</a>
+    <a class="item p-2" *ngFor="let result of results" (click)="selectCard(result)">{{ result }}</a>
   </div>
   <p class="panel-tabs">
     <a class="is-active">All</a>
@@ -64,3 +64,7 @@
     </button>
   </div>
 </nav>
+
+<div class="m-4">
+  <p>{{ card.image_uris?.normal }}</p>
+</div>
