--- a/client/src/app/components/search-card/search-card.component.html
+++ b/client/src/app/components/search-card/search-card.component.html
@@ -1,70 +1,69 @@
-<nav class="panel m-4 is-relative">
-  <p class="panel-heading">Cards</p>
-  <div class="panel-block">
-    <p class="control has-icons-left">
-      <input class="input" type="text" placeholder="Search" (input)="onSearch($event)" />
-      <span class="icon is-left">
+<div class="columns">
+  <div class="column">
+    <nav class="panel m-4 is-relative">
+      <div class="panel-block">
+        <p class="control has-icons-left">
+          <input class="input" type="text" placeholder="Search" (input)="onSearch($event)" />
+          <span class="icon is-left">
         <i class="fas fa-search" aria-hidden="true"></i>
       </span>
-    </p>
-  </div>
-  <div class="notification panel-block results" *ngIf="(filteredResults | async) as results">
-    <a class="item p-2" *ngFor="let result of results" (click)="selectCard(result)">{{ result }}</a>
-  </div>
-  <p class="panel-tabs">
-    <a class="is-active">All</a>
-    <a>Public</a>
-    <a>Private</a>
-    <a>Sources</a>
-    <a>Forks</a>
-  </p>
-  <a class="panel-block is-active">
+        </p>
+      </div>
+      <div class="notification panel-block results" *ngIf="(filteredResults | async) as results">
+        <a class="item p-2" *ngFor="let result of results" (click)="selectCard(result)">{{ result }}</a>
+      </div>
+      <p class="panel-tabs">
+        <a class="is-active">All</a>
+        <a>Public</a>
+        <a>Private</a>
+        <a>Sources</a>
+        <a>Forks</a>
+      </p>
+      <a class="panel-block is-active">
     <span class="panel-icon">
       <i class="fas fa-book" aria-hidden="true"></i>
     </span>
-    bulma
-  </a>
-  <a class="panel-block">
+        bulma
+      </a>
+      <a class="panel-block">
     <span class="panel-icon">
       <i class="fas fa-book" aria-hidden="true"></i>
     </span>
-    marksheet
-  </a>
-  <a class="panel-block">
+        marksheet
+      </a>
+      <a class="panel-block">
     <span class="panel-icon">
       <i class="fas fa-book" aria-hidden="true"></i>
     </span>
-    minireset.css
-  </a>
-  <a class="panel-block">
+        minireset.css
+      </a>
+      <a class="panel-block">
     <span class="panel-icon">
       <i class="fas fa-book" aria-hidden="true"></i>
     </span>
-    jgthms.github.io
-  </a>
-  <a class="panel-block">
+        jgthms.github.io
+      </a>
+      <a class="panel-block">
     <span class="panel-icon">
       <i class="fas fa-code-branch" aria-hidden="true"></i>
     </span>
-    daniellowtw/infboard
-  </a>
-  <a class="panel-block">
+        daniellowtw/infboard
+      </a>
+      <a class="panel-block">
     <span class="panel-icon">
       <i class="fas fa-code-branch" aria-hidden="true"></i>
     </span>
-    mojs
-  </a>
-  <label class="panel-block">
-    <input type="checkbox" />
-    remember me
-  </label>
-  <div class="panel-block">
-    <button class="button is-link is-outlined is-fullwidth">
-      Reset all filters
-    </button>
+        mojs
+      </a>
+      <div class="panel-block">
+        <button class="button is-link is-outlined is-fullwidth">
+          Reset all filters
+        </button>
+      </div>
+    </nav>
   </div>
-</nav>
 
-<div class="m-4">
-  <p>{{ card.image_uris?.normal }}</p>
+  <div class=" column m-4">
+    <img class="card" *ngIf="card?.image_uris?.normal" src="{{ card.image_uris.normal }}" />
+  </div>
 </div>
