--- a/src/app/components/search-card/search-card.component.html
+++ b/src/app/components/search-card/search-card.component.html
@@ -1,69 +1,18 @@
-<div class="columns">
-  <div class="column">
-    <nav class="panel m-4 is-relative">
-      <div class="panel-block">
-        <p class="control has-icons-left">
-          <input class="input" type="text" placeholder="Search" (input)="onSearch($event)" />
-          <span class="icon is-left">
+<nav class="panel m-4 is-relative">
+  <div class="panel-block">
+    <p class="control has-icons-left">
+      <input class="input" type="text" placeholder="Search" (input)="onSearch($event)" />
+      <span class="icon is-left">
         <i class="fas fa-search" aria-hidden="true"></i>
       </span>
-        </p>
-      </div>
-      <div class="notification panel-block results" *ngIf="(filteredResults | async) as results">
-        <a class="item p-2" *ngFor="let result of results" (click)="selectCard(result)">{{ result }}</a>
-      </div>
-      <p class="panel-tabs">
-        <a class="is-active">All</a>
-        <a>Public</a>
-        <a>Private</a>
-        <a>Sources</a>
-        <a>Forks</a>
-      </p>
-      <a class="panel-block is-active">
-    <span class="panel-icon">
-      <i class="fas fa-book" aria-hidden="true"></i>
-    </span>
-        bulma
-      </a>
-      <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-book" aria-hidden="true"></i>
-    </span>
-        marksheet
-      </a>
-      <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-book" aria-hidden="true"></i>
-    </span>
-        minireset.css
-      </a>
-      <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-book" aria-hidden="true"></i>
-    </span>
-        jgthms.github.io
-      </a>
-      <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-code-branch" aria-hidden="true"></i>
-    </span>
-        daniellowtw/infboard
-      </a>
-      <a class="panel-block">
-    <span class="panel-icon">
-      <i class="fas fa-code-branch" aria-hidden="true"></i>
-    </span>
-        mojs
-      </a>
-      <div class="panel-block">
-        <button class="button is-link is-outlined is-fullwidth">
-          Reset all filters
-        </button>
-      </div>
-    </nav>
+    </p>
   </div>
+  <div class="notification panel-block results" *ngIf="(filteredResults | async) as results">
+    <a class="item p-2" *ngFor="let result of results" (click)="selectCard(result)">{{ result }}</a>
+  </div>
+</nav>
 
-  <div class=" column m-4">
-    <img class="card" *ngIf="card?.image_uris?.normal" src="{{ card.image_uris.normal }}" />
-  </div>
+<div class=" column m-4">
+  <img class="card" *ngIf="card?.image_uris?.small" src="{{ card.image_uris.normal }}" />
 </div>
+
